<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Account.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_left"
            android:layout_marginRight="@dimen/activity_margin_right"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/LA_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:src="@drawable/lucidme" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/email_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/password_EditText"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="15.3sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/password_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/Password"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="15.3sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/MyButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="LoginButtonHandler"
                android:text="@string/login_text"
                android:textColor="#fff" />

            <View
                style="@style/Divider"
                android:layout_marginTop="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="SignUpButtonHandler"
                    android:padding="10dp"
                    android:layout_weight="50"
                    android:text="@string/new_dreamer_text"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="ResetPasswordButtonHandler"
                    android:padding="10dp"
                    android:gravity="right"
                    android:layout_weight="50"
                    android:text="@string/forgot_password_text"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
