<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.amankumar.lucidme.Account.SignUpActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/LA_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:src="@drawable/lucidme" />

            <EditText
                android:id="@+id/email_SignUpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorWhite"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:nextFocusDown="@+id/username_SignUpEditText"
                android:padding="14dp"
                android:singleLine="true"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="15.3sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/username_SignUpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:nextFocusDown="@+id/password_SignUpEditText"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="15.3sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/password_SignUpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/SignUpButton"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="15.3sp" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/SignUpButton"
                style="@style/MyButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="SignUpUserHandler"
                android:text="@string/sign_up_button_text"
                android:textColor="#fff" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
